--- a/src/components/tabla-amortizacion/style.module.scss
+++ b/src/components/tabla-amortizacion/style.module.scss
@@ -4,6 +4,22 @@
   padding-bottom: 20px;
 }
 
+.back_container {
+  display: flex;
+  display: -webkit-box;
+  display: -ms-flexbox;
+
+  justify-content: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+
+  padding-top: 20px;
+  a {
+    color: #65184e;
+    text-decoration: none;
+  }
+}
+
 .title_table_container {
   display: flex;
   justify-content: center;
