--- a/src/style.module.scss
+++ b/src/style.module.scss
@@ -90,8 +90,29 @@
   }
 
   .main_button_container {
-    padding-top: 20px;
     display: flex;
+    display: -webkit-box;
+    display: -ms-flexbox;
+
     justify-content: center;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+
+    padding-top: 20px;
+  }
+  .back_container {
+    display: flex;
+    display: -webkit-box;
+    display: -ms-flexbox;
+
+    justify-content: center;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+
+    padding-top: 20px;
+    a {
+      color: #65184e;
+      text-decoration: none;
+    }
   }
 }
